ghost/admin/app/styles/patterns/_shame.css
/* Shame
/* ---------------------------------------------------------- */
/* TODO: Kill with fire */

