Koenig - Quick-fix for broken styles
no issue
- our custom `.kg-card-selected` and `.kg-media-placeholder` classes were removed in https://github.com/TryGhost/Ghost-Admin/pull/985
- add them back in our 🛎🛎🛎 **shame** file until they make their way into Spirit

--- a/ghost/admin/app/styles/patterns/_shame.css
+++ b/ghost/admin/app/styles/patterns/_shame.css
@@ -1,3 +1,19 @@
 /* Shame
 /* ---------------------------------------------------------- */
 /* TODO: Kill with fire */
+
+.kg-card-selected {
+    border: 1px solid var(--blue);
+}
+
+/* force a 16:10 aspect ratio */
+.kg-media-placeholder:before {
+    content: "";
+    float: left;
+    padding-bottom: 62.5%;
+}
+.kg-media-placeholder:after {
+    clear: left;
+    content: " ";
+    display: table;
+}
